[package]
name = "Yr2022"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "day_one"
path = "src/day_one.rs"

[[bin]]
name = "day_two"
path = "src/day_two.rs"

[[bin]]
name = "day_three"
path = "src/day_three.rs"

[[bin]]
name = "day_four"
path = "src/day_four.rs"

[[bin]]
name = "day_five"
path = "src/day_five.rs"

[[bin]]
name = "day_six"
path = "src/day_six.rs"

[[bin]]
name = "day_seven"
path = "src/day_seven.rs"

[[bin]]
name = "day_eight"
path = "src/day_eight.rs"

[[bin]]
name = "day_nine"
path = "src/day_nine.rs"

[[bin]]
name = "day_ten"
path = "src/day_ten.rs"

[[bin]]
name = "day_eleven"
path = "src/day_eleven.rs"

[[bin]]
name = "day_twelve"
path = "src/day_twelve.rs"

[[bin]]
name = "day_thirteen"
path = "src/day_thirteen.rs"

[[bin]]
name = "day_fourteen"
path = "src/day_fourteen.rs"

[[bin]]
name = "day_fifteen"
path = "src/day_fifteen.rs"

[[bin]]
name = "day_seventeen"
path = "src/day_seventeen.rs"

[[bin]]
name = "day_eighteen"
path = "src/day_eighteen.rs"

[[bin]]
name = "day_nineteen"
path = "src/day_nineteen.rs"

[[bin]]
name = "day_twentyone"
path = "src/day_twentyone.rs"

[[bin]]
name = "old_test"
path = "src/old_test.rs"


[dependencies]
lazy_static = "1.4.0"
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
itertools = "0.10.5"
rayon = "1.5"
